ghost/admin/assets/sass/modules/global.scss
/* ... */
// General Navigation

nav {
    ul {
        list-style: none;
        margin:0;
        padding:0;
        border-top:$lightbrown 1px solid;
    }

    li { font-size:1.1em;

        a {
            display:block;
            padding:10px 15px;
            color:$brown;
            border-bottom:$lightbrown 1px solid;

            &:hover {
                color:$darkgrey;
                background: $lightbrown;
                text-decoration: none;
            }

            &:before { margin-right:1em; } // Make space for icons

        }
    }
}

/* ==========================================================================
   Main Navigation
   ========================================================================== */

.ghost-logo {
    @include icon($i-ghost);
    display: block;
    float:left;
    height:40px;
    padding:12px 15px;
    color: lighten($grey, 10%);
    @include box-sizing(border-box);

    &:hover {text-decoration:none;}
}

.ghost-logo:hover {
    color: $lightgrey;
    background:darken($darkgrey, 2%);
}



.navbar {
    height: 40px;
    font-size: 0.85em;
    background: $darkgrey;
    @include breakpoint($netbook) {font-weight:normal}

    // The main navbar styles, apply to to everything.
    nav {

        ul {
            float:left;
            border-left:$grey 1px solid;
            border-top:none;
        }

        li {
            float:left;
            font-size: 1em;
            position:relative;
            border-right:$grey 1px solid;

            a {
                display: block;
                height:40px;
                padding:11px 15px;
                border-bottom:none;
                color: $midgrey;
                text-transform: uppercase;
                @include box-sizing(border-box);
            }

            a:hover,
            &.active a {
                color: $lightgrey;
                text-decoration: none;
                position:relative;
                background:darken($grey, 2%);
                box-shadow: 0 -2px 2px rgba(0,0,0,0.2) inset;
            }

            // Make a little arrow pointing up at the currently active menu item
            &.active a:after {
                content:"";
                position:absolute;
                bottom:0;
                left:50%;
                margin-left:-5px;
                border-width:0 5px 5px 5px;
                border-style:solid;
                border-color:$lightbrown transparent;
                display:block;
                width:0;

                @include breakpoint($mobile) {
                    border-color: #fff transparent;
                }

            }

            ul {
                position: absolute;
                top:40px;
                right:0;
                min-width:200px;
                background: $darkgrey;
            }

            li {
                width: 100%;
                border-right: none;
            }

        }

        // Add some icons to specific nav items
        a:before {margin-right: 5px;}
        .dashboard a {  @include icon($i-stats) {vertical-align: -10%} }
        .content a {    @include icon($i-content) }
        .editor a {     @include icon($i-add) }
        .settings a {   @include icon($i-settings2) }

    }//nav ul

    // Style any nav items which have dropdowns
    .subnav {
        position: relative;

        // The anchor which toggles the menu open/closed
        > a {
            @include icon-after($i-chevron-down, 8px) {margin-left: 8px};

            &.active {
                color: $lightgrey;
                background: darken($grey, 3%);
                @include transition(none);
                box-shadow: none;
            }
        }

        // The dropdown menu
        ul {
            display: none;
            padding: 7px 0;
            border-left: none;
            position: absolute;
            top:40px;
            left:-1px;
            z-index: 800;
            background:darken($grey, 3%);
            box-shadow: rgba(0,0,0,0.2) 0 4px 6px;
        }

        li {
            a {
                color: $lightgrey;

                &:hover {
                    background: darken($darkgrey, 10%);
                    @include transition(none);
                    box-shadow: none;
                }

                &:before { margin-right: 1em; } // space for icons
            }
        }

        .divider {
            height: 1px;
            margin: 7px 0;
            overflow: hidden;
            background: $grey;
        }

    }//.subnav

}//.navbar

// The user menu in the top right corner of the screen
#usermenu {
    position:absolute;
    top:0;
    right:0;
    border-right:none;
    border-left:$grey 1px solid;

    > a {
        padding-left:43px; //15px + 18px avatar + 10px
    }

    .avatar {
        height:18px;
        width:18px;
        border-radius: 50px;
        position:absolute;
        top:11px;
        left:15px;
    }

    > ul {
        right: 0;
        left: auto;
    }

    //Add some icons to specific items
    .usermenu-profile a { @include icon($i-user) }
    .usermenu-help a { @include icon($i-support, 1.1em) }
    .usermenu-shortcuts a { @include icon($i-pc)  }
    .usermenu-signout a { @include icon($i-power) }
}
/* ... */

